Se terminaron todos los gets de los articulos

--- a/app/server/client/index.html
+++ b/app/server/client/index.html
@@ -89,6 +89,10 @@
     <script src="components/gorras.component.js"></script>
     <script src="views/gorras.template.html"></script>
 
+    <script src="modules/search.module.js"></script>
+    <script src="components/search.component.js"></script>
+    <script src="views/search.template.html"></script>
+
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
 
