--- a/app/server/client/index.html
+++ b/app/server/client/index.html
@@ -16,6 +16,12 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/ngCart/dist/ngCart.js"></script>
+    <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
+
+
+    <!--SERVICES-->
+    <script src="services/user.service.js"></script>
+    <!--SERVICES-->
 
     <script src="modules/account.module.js"></script>
     <script src="components/account.component.js"></script>
