(Se anadio el Update Inventory

--- a/app/server/client/index.html
+++ b/app/server/client/index.html
@@ -99,6 +99,10 @@
     <script src="components/search.component.js"></script>
     <script src="views/search.template.html"></script>
 
+    <script src="modules/update-inventory.module.js"></script>
+    <script src="components/update-inventory.component.js"></script>
+    <script src="views/update-inventory.template.html"></script>
+
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
 
@@ -110,8 +114,6 @@
   <div ng-view></div>
   <span><hr></span>
   <footer-nav> </footer-nav>
-
-
 
   </body>
 </html>
