This shit better work

--- a/app/server/client/index.html
+++ b/app/server/client/index.html
@@ -21,7 +21,12 @@
 
     <!--SERVICES-->
     <script src="services/user.service.js"></script>
+    <script src="services/itemDetail.service.js"></script>
     <!--SERVICES-->
+
+    <script src="modules/itemDetail.module.js"></script>
+    <script src="components/itemDetail.component.js"></script>
+    <script src="views/itemDetail.template.html"></script>
 
     <script src="modules/account.module.js"></script>
     <script src="components/account.component.js"></script>
