search service Add

--- a/app/server/client/index.html
+++ b/app/server/client/index.html
@@ -22,6 +22,7 @@
     <!--SERVICES-->
     <script src="services/user.service.js"></script>
     <script src="services/itemDetail.service.js"></script>
+    <script src="services/itemSearch.service.js"></script>
     <!--SERVICES-->
 
     <script src="modules/itemDetail.module.js"></script>
