arreglando problemas de sintaxis

--- a/tienditacolegial/app/server/client/index.html
+++ b/tienditacolegial/app/server/client/index.html
@@ -19,97 +19,76 @@
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
 
     <!--SERVICES-->
-    <script src="services/user.service.js"></script>
-    <script src="services/itemDetail.service.js"></script>
-    <script src="services/itemSearch.service.js"></script>
+    <script type="text/javascript" src="services/user.service.js"></script>
+    <script type="text/javascript" src="services/itemDetail.service.js"></script>
+    <script type="text/javascript" src="services/itemSearch.service.js"></script>
     <!--SERVICES-->
 
-    <script src="modules/itemDetail.module.js"></script>
-    <script src="components/itemDetail.component.js"></script>
-    <script src="views/itemDetail.template.html"></script>
+    <script type="text/javascript" src="modules/itemDetail.module.js"></script>
+    <script type="text/javascript" src="components/itemDetail.component.js"></script>
 
-    <script src="modules/account.module.js"></script>
-    <script src="components/account.component.js"></script>
-    <script src="views/account.template.html"></script>
+    <script type="text/javascript" src="modules/account.module.js"></script>
+    <script type="text/javascript" src="components/account.component.js"></script>
 
-    <script src="modules/account-info.module.js"></script>
-    <script src="components/account-info.component.js"></script>
-    <script src="views/account-info.template.html"></script>
+    <script type="text/javascript" src="modules/account-info.module.js"></script>
+    <script type="text/javascript" src="components/account-info.component.js"></script>
 
-    <script src="modules/articles.module.js"></script>
-    <script src="components/articles.component.js"></script>
-    <script src="views/articles.template.html"></script>
+    <script type="text/javascript" src="modules/articles.module.js"></script>
+    <script type="text/javascript" src="components/articles.component.js"></script>
 
-    <script src="modules/books.module.js"></script>
-    <script src="components/books.component.js"></script>
-    <script src="views/books.template.html"></script>
+    <script type="text/javascript" src="modules/books.module.js"></script>
+    <script type="text/javascript" src="components/books.component.js"></script>
 
-    <script src="modules/cart.module.js"></script>
-    <script src="components/cart.component.js"></script>
-    <script src="views/cart.template.html"></script>
+    <script type="text/javascript" src="modules/cart.module.js"></script>
+    <script type="text/javascript" src="components/cart.component.js"></script>
 
-    <script src="modules/contact.module.js"></script>
-    <script src="components/contact.component.js"></script>
-    <script src="views/contact.template.html"></script>
+    <script type="text/javascript" src="modules/contact.module.js"></script>
+    <script type="text/javascript" src="components/contact.component.js"></script>
 
-    <script src="modules/footer-nav.module.js"></script>
-    <script src="components/footer-nav.component.js"></script>
-    <script src="views/footer-nav.template.html"></script>
+    <script type="text/javascript" src="modules/footer-nav.module.js"></script>
+    <script type="text/javascript" src="components/footer-nav.component.js"></script>
 
-    <script src="modules/header.module.js"></script>
-    <script src="components/header.component.js"></script>
-    <script src="views/header.template.html"></script>
+    <script type="text/javascript" src="modules/header.module.js"></script>
+    <script type="text/javascript" src="components/header.component.js"></script>
 
-    <script src="modules/home-page.module.js"></script>
-    <script src="components/home-page.component.js"></script>
-    <script src="views/home-page.template.html"></script>
+    <script type="text/javascript" src="modules/home-page.module.js"></script>
+    <script type="text/javascript" src="components/home-page.component.js"></script>
 
-    <script src="modules/ropa.module.js"></script>
-    <script src="components/ropa.component.js"></script>
-    <script src="views/ropa.template.html"></script>
+    <script type="text/javascript" src="modules/ropa.module.js"></script>
+    <script type="text/javascript" src="components/ropa.component.js"></script>
 
-    <script src="modules/sign-in.module.js"></script>
-    <script src="components/sign-in.component.js"></script>
-    <script src="views/sign-in.template.html"></script>
+    <script type="text/javascript" src="modules/sign-in.module.js"></script>
+    <script type="text/javascript" src="components/sign-in.component.js"></script>
 
-    <script src="modules/top-sellers.module.js"></script>
-    <script src="components/top-sellers.component.js"></script>
-    <script src="views/top-sellers.template.html"></script>
+    <script type="text/javascript" src="modules/top-sellers.module.js"></script>
+    <script type="text/javascript" src="components/top-sellers.component.js"></script>
 
-    <script src="modules/new-arrivals.module.js"></script>
-    <script src="components/new-arrivals.component.js"></script>
-    <script src="views/new-arrivals.template.html"></script>
+    <script type="text/javascript" src="modules/new-arrivals.module.js"></script>
+    <script type="text/javascript" src="components/new-arrivals.component.js"></script>
 
-    <script src="modules/checkout.module.js"></script>
+    <script type="text/javascript" src="modules/checkout.module.js"></script>
     <script src="components/checkout.component.js"></script>
-    <script src="views/checkout.template.html"></script>
 
-    <script src="modules/payed.module.js"></script>
-    <script src="components/payed.component.js"></script>
-    <script src="views/payed.template.html"></script>
+    <script type="text/javascript" src="modules/payed.module.js"></script>
+    <script type="text/javascript" src="components/payed.component.js"></script>
 
-    <script src="modules/camisas.module.js"></script>
-    <script src="components/camisas.component.js"></script>
-    <script src="views/camisas.template.html"></script>
+    <script type="text/javascript" src="modules/camisas.module.js"></script>
+    <script type="text/javascript" src="components/camisas.component.js"></script>
 
-    <script src="modules/pantalones.module.js"></script>
-    <script src="components/pantalones.component.js"></script>
-    <script src="views/pantalones.template.html"></script>
+    <script type="text/javascript" src="modules/pantalones.module.js"></script>
+    <script type="text/javascript" src="components/pantalones.component.js"></script>
 
-    <script src="modules/gorras.module.js"></script>
-    <script src="components/gorras.component.js"></script>
-    <script src="views/gorras.template.html"></script>
+    <script type="text/javascript" src="modules/gorras.module.js"></script>
+    <script type="text/javascript" src="components/gorras.component.js"></script>
 
-    <script src="modules/search.module.js"></script>
-    <script src="components/search.component.js"></script>
-    <script src="views/search.template.html"></script>
+    <script type="text/javascript" src="modules/search.module.js"></script>
+    <script type="text/javascript" src="components/search.component.js"></script>
 
-    <script src="modules/update-inventory.module.js"></script>
-    <script src="components/update-inventory.component.js"></script>
-    <script src="views/update-inventory.template.html"></script>
+    <script type="text/javascript" src="modules/update-inventory.module.js"></script>
+    <script type="text/javascript" src="components/update-inventory.component.js"></script>
 
-    <script src="app.module.js"></script>
-    <script src="app.config.js"></script>
+    <script type="text/javascript" src="app.module.js"></script>
+    <script type="text/javascript" src="app.config.js"></script>
 
   </head>
   <body ng-app="tienditaColegial">
