--- a/tienditacolegial/app/server/client/index.html
+++ b/tienditacolegial/app/server/client/index.html
@@ -24,6 +24,9 @@
     <script type="text/javascript" src="services/itemSearch.service.js"></script>
     <!--SERVICES-->
 
+    <script type="text/javascript" src="modules/editUser.module.js"></script>
+    <script type="text/javascript" src="components/editUser.component.js"></script>
+
     <script type="text/javascript" src="modules/itemDetail.module.js"></script>
     <script type="text/javascript" src="components/itemDetail.component.js"></script>
 
