--- a/tienditacolegial/app/server/client/index.html
+++ b/tienditacolegial/app/server/client/index.html
@@ -21,6 +21,11 @@
     firebase.initializeApp(config);
     </script>
 
+    <script src="bower_components/es6-promise/es6-promise.auto.min.js"></script>
+
+    <script src="bower_components/sweetalert2/dist/sweetalert2.min.js"></script>
+    <link rel="stylesheet" href="bower_components/sweetalert2/dist/sweetalert2.min.css">
+
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
