--- a/tienditacolegial/app/server/client/index.html
+++ b/tienditacolegial/app/server/client/index.html
@@ -45,6 +45,7 @@
     <script type="text/javascript" src="services/user.service.js"></script>
     <script type="text/javascript" src="services/itemDetail.service.js"></script>
     <script type="text/javascript" src="services/itemSearch.service.js"></script>
+    <script type="text/javascript" src="services/addItemService.service.js"></script>
     <!--SERVICES-->
 
     <script type="text/javascript" src="modules/itemDetail.module.js"></script>
