Se agrego el update

--- a/tienditacolegial/app/server/client/index.html
+++ b/tienditacolegial/app/server/client/index.html
@@ -37,9 +37,10 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
 
     <!--SERVICES-->
-    <script type="text/javascript" src="services/user.service.js"></script>
-    <script type="text/javascript" src="services/itemDetail.service.js"></script>
-    <script type="text/javascript" src="services/itemSearch.service.js"></script>
+    <script type="text/javascript" src="services/user.service.js"> </script>
+    <script type="text/javascript" src="services/itemDetail.service.js"> </script>
+    <script type="text/javascript" src="services/itemSearch.service.js"> </script>
+    <script type="text/javascript" src="services/addItem.service.js"> </script>
     <!--SERVICES-->
 
 
